<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:paddingBottom="3dip" android:paddingTop="3dip" android:paddingLeft="10dip" android:paddingRight="10dip">

    <TextView
        android:id="@+id/tvRecordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tvRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dip" android:paddingBottom="2dip" android:paddingTop="2dip" android:paddingLeft="20dip"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="15dip"
            android:typeface="monospace" android:layout_marginLeft="60dip"/>

        <TextView
            android:id="@+id/tvRemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textSize="15dip"
            android:typeface="monospace" android:layout_marginLeft="175dip"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imgLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/segment"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"/>

</LinearLayout>