<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block"
            android:gravity="center"
            android:textSize="15dip"
            android:padding="2dip"/>

        <Spinner
            android:id="@+id/spinBlkNum"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="gone" >
            
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/value"
		            android:textSize="18dip"
		            android:padding="5dip"/>
		
		        <TextView
		            android:id="@+id/tvValue"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="18dip"
		            android:padding="5dip"/>
		
		    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increment"
                    android:padding="5dip"
                    android:textSize="18dip"
                    android:width="100dip"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/edtIncrement"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:lines="1" android:gravity="right|center_vertical" android:maxLength="5">

                    <requestFocus />
                </EditText>

                <Button
                    android:id="@+id/btnIncrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increment"
                    android:width="100dip"
                    android:textSize="15dip"/>
                
            </LinearLayout>
                
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decrement"
                    android:padding="5dip"
                    android:textSize="18dip"
                    android:width="100dip"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/edtDecrement"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:lines="1" android:gravity="right|center_vertical" android:maxLength="5">
                </EditText>

                <Button
                    android:id="@+id/btnDecrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decrement"
                    android:width="100dip"
                    android:textSize="15dip"/>
                
            </LinearLayout>
                
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_value"
                    android:padding="5dip"
                    android:textSize="18dip"
                    android:width="100dip"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/edtValue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="phone"
                    android:lines="1" android:gravity="right|center_vertical" android:maxLength="5">
                </EditText>

                <Button
                    android:id="@+id/btnValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_value"
                    android:width="100dip"
                    android:textSize="15dip"/>
                
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_format" android:textSize="16dip"/>

            <Button
                android:id="@+id/btnFormat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format" android:textSize="15dip"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>