<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/money"
            android:textSize="18dip" />
        
        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:textSize="18dip" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:padding="5dip"
            android:textSize="18dip"
            android:width="100dip"
            android:gravity="center"/>
        
        <EditText
            android:id="@+id/edtIncrementMoney"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="phone"
            android:lines="1"
            android:gravity="right|center_vertical"
            android:maxLength="5">
            
            <requestFocus />
        </EditText>
        
        <Button
            android:id="@+id/btnIncrementMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:width="100dip"
            android:textSize="15dip"/>
    
    </LinearLayout>
                
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/decrement"
		    android:padding="5dip"
		    android:textSize="18dip"
		    android:width="100dip"
		    android:gravity="center"/>
		
		<EditText
		    android:id="@+id/edtDecrementMoney"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:digits="0123456789"
		    android:inputType="phone"
		    android:lines="1" android:gravity="right|center_vertical" android:maxLength="5">
		</EditText>
		
		<Button
		    android:id="@+id/btnDecrementMoney"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/decrement"
		    android:width="100dip"
		    android:textSize="15dip"/>

    </LinearLayout>

    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/i_value"
		    android:padding="5dip"
		    android:textSize="18dip"
		    android:width="100dip"
		    android:gravity="center"/>
		
		<EditText
		    android:id="@+id/edtMoney"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:digits="0123456789"
		    android:inputType="phone"
		    android:lines="1" android:gravity="right|center_vertical" android:maxLength="5">
		</EditText>
		
		<Button
		    android:id="@+id/btnMoney"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/i_value"
		    android:width="100dip"
		    android:textSize="15dip"/>

    </LinearLayout>

</LinearLayout>